2009-01-04  Sebastian Pölsterl  <sebp@svn.gnome.org>

	* modulesets/gnome-2.26.modules: dvb-daemon depends on gst-python

2009-01-03  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* modulesets/gnome-suites-2.26.modules: gnome-python and
	gnome-python-desktop now use a builtin waf.

	* modulesets/gnome-suites-2.24.modules,
	* modulesets/gnome-suites-2.22.modules: gnome-python and gnome-python-desktop branched.

2009-01-03  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.26.modules: removed hard dependency of glib
	on shared-mime-info, as shared-mime-info has a real build dependency on
	glib, and it caused a dependency cycle; added shared-mime-info as
	<after> for both glib and gtk+ to get back to the situation before glib
	and gtk+ deps shuffleing.

2009-01-03  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.26.modules:
	* modulesets/gnome-suites-2.26.modules: updated libgda to 3.99.7 and
	added it as a dependency of anjuta.

2009-01-03  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.26.modules: gnome-build has been
	incorporated in anjuta source tree.

2009-01-03  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/base.py: display an informative message when running
	`jhbuild build $module' while $module is in the ignore list.
	(closes: #564241)

2009-01-03  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.26.modules: added expat as
	dependency of fontconfig (it could also use libxml2 but fontconfig
	configure script prefers expat).  (closes: #565994)

2009-01-02  Matthias Clasen  <mclasen@redhat.com>

	* modulesets/gnome-suites-2.26.modules: Shuffle glib, gtk+ deps
	around a little bit.

2008-12-31  Sebastian Pölsterl  <sebp@svn.gnome.org>

	* modulesets/gnome-2.26.modules: dvb-daemon no longer
	depends on gconf

2008-12-28  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/freedesktop-2.26.modules: add DeviceKit, DeviceKit-power