@@ -1512,6 +1512,15 @@ libgnomecanvas is missing branch definition for gnome-2-20
 	  </listitem>
 	</varlistentry>
 	<varlistentry>
+	  <term id="cfg-modulesets-dir"><varname>modulesets_dir</varname></term>
+	  <listitem>
+	    <simpara>A string giving the directory containing the
+	    modulesets to use.  Defaults to the
+	    <filename>modulesets/</filename> directory in JHBuild sources.
+	    </simpara>
+	  </listitem>
+	</varlistentry>
+	<varlistentry>
 	  <term id="cfg-nobuild"><varname>nobuild</varname></term>
 	  <listitem>
 	    <simpara>A boolean value which, if set to
