@@ -7,6 +7,9 @@ import os
 if 'GTK_PATH' in os.environ.keys():
     del os.environ['GTK_PATH']
 
+# module directory
+modulesets_dir = os.path.join(os.path.dirname(__file__), '../modulesets')
+
 # what modules to build?
 moduleset = 'gnome-2.26'
 modules = [ 'meta-gnome-desktop' ]
