@@ -1,3 +1,11 @@
+2009-01-04  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/config.py, jhbuild/defaults.jhbuildrc, jhbuild/moduleset.py,
+	doc/C/jhbuild.xml: added a new modulesets_dir configuration variable,
+	so it is possible to define an alternate directory for moduleset files;
+	added an entry about this configuration variable to the documentation.
+	(closes: #566456, initial patch by David Farning)
+
 2009-01-04  Sebastian Pölsterl  <sebp@svn.gnome.org>
 
 	* modulesets/gnome-2.26.modules: dvb-daemon depends on gst-python
